[package]
name = "eladmin_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
#web
salvo = { version = "0.79.0", features = ["catch-panic", "cors"] }
tokio = { version = "1", features = ["macros"] }

#配置
config = "0.15.10"

#序列化
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

#日期支持
chrono = { version = "0.4.40", features = ["serde"] }

#log日志
tracing = "0.1"
tracing-subscriber = "0.3.0"

#rbatis
rbs = { version = "4.6"}
rbatis = { version = "4.6"}
rbdc-pg = { version = "4.6" }
# rbdc-mysql = { version="4.6" }
#log日志支持(rbatis必须)
log = "0.4"
fast_log="1.2.2"


[profile.dev]
env = { CONFIG = "dev" }

[profile.release]
env = { CONFIG = "release" }
lto = true
opt-level = 3
codegen-units = 1