[package]
name = "eladmin_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
#web
salvo = { version = "0.79.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }

#配置
config = "0.15.10"

#序列化
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

#日期支持
chrono = { version = "0.4.40", features = ["serde"] }

#log日志
tracing = "0.1"
tracing-subscriber = "0.3.0"

#rbatis
rbs = { version = "4.6"}
rbatis = { version = "4.6"}
rbdc-pg = { version = "4.6" }
# rbdc-mysql = { version="4.6" }
#log日志支持(rbatis必须)
log = "0.4"
fast_log="1.2.2"

#redis
redis = { version = "0.32.3", features = ["tokio-comp"] ,optional = true}
deadpool-redis = { version = "0.21.1", features = ["json"] }

# uuid
uuid = { version = "1.17.0", features = ["v4", "serde", "std"] }
# 验证码
captcha-rs = "0.2.11"
# 错误处理
anyhow = "1.0"
thiserror = "2.0.12"

# jwt
jsonwebtoken = "9"
# rsa
rsa = "0.9.8"
base64 = "0.22.1"
rand = "0.8"

# 密码加密
bcrypt = "0.17.0"

[profile.dev]
env = { CONFIG = "dev" }

[profile.release]
env = { CONFIG = "release" }
lto = true
opt-level = 3
codegen-units = 1
